# news-bot

./: Dockerfile  news-bot  pyproject.toml  run-news-bot.sh
.github/workflows/: docker-push.yml
examples/: test.py
news_bot/: cache.py  main.py  models.py
news_bot/agents/: api_key.py  base.py  digest_assistant.py  news_assistant.py
news_bot/config/sources/: amperkurier.yaml  merkur.yaml  sueddeutsche.yaml
news_bot/fetcher/: __init__.py  content.py
news_bot/formatters/: digest_formatter.py  html.py
news_bot/formatters/templates/: digest.html.mustache  index.html.mustache  styles.css
news_bot/sources/: __init__.py  article.py  base.py  factory.py  fetcher.py
